--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
 
 
         注意： 该功能测得的数据仅供参考，因设备、灯光等环境因素影响与实际心率略有偏差。若发现身体不适建议及时就医！"</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
